# MLOS

./: .buildinfo  .bumpversion.cfg  .editorconfig  .pylintrc  Directory.Build.props  Dockerfile  Makefile  README.md  TODO  genindex.html  index.html  installation.html  mlos_bench.run.usage.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.devcontainer/: devcontainer.json
.devcontainer/scripts/: prep-container-build  prep-container-build.ps1
.github/workflows/: fork-sync-from-upstream.yml  fork-sync.yml  linux.yml  main.yml  windows.yml
_sources/source_tree_docs/: index.md.txt
_static/: documentation_options.js
api/mlos_bench/: mlos_bench.config.html  mlos_bench.config.schemas.config_schemas.html  mlos_bench.config.schemas.html  mlos_bench.dict_templater.html  mlos_bench.environment.base_environment.html  mlos_bench.environment.composite_env.html  mlos_bench.environment.html  mlos_bench.environment.local.html  mlos_bench.environment.local.local_env.html  mlos_bench.environment.local.local_env_fileshare.html  mlos_bench.environment.mock_env.html  mlos_bench.environment.remote.html  mlos_bench.environment.remote.os_env.html  mlos_bench.environment.remote.remote_env.html  mlos_bench.environment.remote.vm_env.html  mlos_bench.environment.status.html  mlos_bench.environments.base_environment.html  mlos_bench.environments.composite_env.html  mlos_bench.environments.html  mlos_bench.environments.local.html  mlos_bench.environments.local.local_env.html  mlos_bench.environments.local.local_fileshare_env.html  mlos_bench.environments.mock_env.html  mlos_bench.environments.remote.host_env.html  mlos_bench.environments.remote.html  mlos_bench.environments.remote.network_env.html  mlos_bench.environments.remote.os_env.html  mlos_bench.environments.remote.remote_env.html  mlos_bench.environments.remote.saas_env.html  mlos_bench.environments.remote.vm_env.html  mlos_bench.environments.script_env.html  mlos_bench.environments.status.html  (+181 more)
conda-envs/: mlos-3.10.yml  mlos-3.11.yml  mlos-3.8.yml  mlos-3.9.yml  mlos-windows.yml  mlos.yml
htmlcov/: class_index.html  conftest_py.html  d_01a0fb711d8b07b3___init___py.html  d_067584b402678614_test_storage_schemas_py.html  d_0bbe7f63b99f1486___init___py.html  d_0bbe7f63b99f1486_local_exec_python_test_py.html  d_0bbe7f63b99f1486_local_exec_test_py.html  d_0bd431c13c518cba_test_cli_schemas_py.html  d_12cf951eedca9a89___init___py.html  d_12cf951eedca9a89_mock_local_exec_service_py.html  d_1e0e6bde7052d662___init___py.html  d_1e0e6bde7052d662_local_exec_python_test_py.html  d_1e0e6bde7052d662_local_exec_test_py.html  d_1fe5d26167948339_test_load_optimizer_config_examples_py.html  d_20c004c35735c01d___init___py.html  d_20c004c35735c01d_config_schemas_py.html  d_22c61dea2cf7a261___init___py.html  d_22c61dea2cf7a261_base_environment_py.html  d_22c61dea2cf7a261_composite_env_py.html  d_22c61dea2cf7a261_mock_env_py.html  d_22c61dea2cf7a261_status_py.html  d_23ca098d381c2703___init___py.html  d_23ca098d381c2703_conftest_py.html  d_2af64a9d4152bba3___init___py.html  d_2af64a9d4152bba3_base_environment_py.html  d_2af64a9d4152bba3_composite_env_py.html  d_2af64a9d4152bba3_mock_env_py.html  d_2af64a9d4152bba3_script_env_py.html  d_2af64a9d4152bba3_status_py.html  d_2f8ecfca0b9e9362___init___py.html  d_2f8ecfca0b9e9362_base_fileshare_py.html  d_2f8ecfca0b9e9362_base_service_py.html  d_2f8ecfca0b9e9362_config_persistence_py.html  d_323f8141f9f539b4___init___py.html  d_323f8141f9f539b4_base_optimizer_py.html  d_323f8141f9f539b4_convert_configspace_py.html  d_323f8141f9f539b4_grid_search_optimizer_py.html  d_323f8141f9f539b4_mlos_core_optimizer_py.html  d_323f8141f9f539b4_mock_optimizer_py.html  d_323f8141f9f539b4_one_shot_optimizer_py.html  (+526 more)
mlos_bench/: _version.py  pyproject.toml  setup.py
mlos_bench/mlos_bench/: launcher.py  version.py
mlos_bench/mlos_bench/config/services/remote/azure/arm-templates/: vnet.jsonc
mlos_bench/mlos_bench/environments/: base_environment.py  composite_env.py
mlos_bench/mlos_bench/environments/local/: local_env.py  local_fileshare_env.py
mlos_bench/mlos_bench/optimizers/: mlos_core_optimizer.py
mlos_bench/mlos_bench/schedulers/: base_scheduler.py
mlos_bench/mlos_bench/services/: base_fileshare.py  base_service.py  config_persistence.py
mlos_bench/mlos_bench/services/local/: local_exec.py  temp_dir_context.py
mlos_bench/mlos_bench/services/remote/azure/: azure_auth.py  azure_deployment_services.py  azure_fileshare.py  azure_network_services.py  azure_saas.py  azure_services.py  azure_vm_services.py
mlos_bench/mlos_bench/services/remote/ssh/: ssh_host_service.py  ssh_service.py
mlos_bench/mlos_bench/services/types/: config_loader_type.py
mlos_bench/mlos_bench/storage/: storage_factory.py
mlos_bench/mlos_bench/tests/: launcher_parse_args_test.py
mlos_bench/mlos_bench/tests/config/cli/: test_load_cli_config_examples.py
mlos_bench/mlos_bench/tests/config/environments/: test_load_environment_config_examples.py
mlos_bench/mlos_bench/tests/config/services/: test_load_service_config_examples.py
mlos_bench/mlos_bench/tests/optimizers/: toy_optimization_loop_test.py
mlos_bench/mlos_bench/tests/services/: config_persistence_test.py  mock_service.py
mlos_bench/mlos_bench/tests/services/local/: local_exec_test.py
mlos_bench/mlos_bench/tests/services/local/mock/: mock_local_exec_service.py
mlos_bench/mlos_bench/tests/services/remote/azure/: azure_vm_services_test.py
mlos_bench/mlos_bench/tests/services/remote/mock/: mock_auth_service.py  mock_fileshare_service.py  mock_network_service.py  mock_remote_exec_service.py  mock_vm_service.py
mlos_bench/mlos_bench/tests/tunables/: tunable_to_configspace_test.py
mlos_bench/mlos_bench/tunables/: tunable.py
mlos_core/: _version.py  pyproject.toml  setup.py
mlos_core/mlos_core/: version.py
mlos_core/mlos_core/spaces/converters/: util.py
mlos_viz/: _version.py  pyproject.toml  setup.py
scripts/: run-python-tests.cmd  run-python-tests.sh  sanity-check-whl.sh
source_tree_docs/: index.html
(+337 files in other folders)
