[build-system]
requires = ["setuptools", "setuptools-scm>=8.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlos-core"
authors = [
    {name = "Microsoft", email = "mlos-maintainers@service.microsoft.com"},
]
maintainers = [
    {name = "Microsoft", email = "mlos-maintainers@service.microsoft.com"},
]
description = "MLOS Core Python interface for parameter optimization."
keywords = [
    "autotuning",
    "optimization",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
license = {"text" = "MIT"}
requires-python = ">=3.8"
dynamic = [
    "readme",   # urls get dynamically mutated by the build process
    "version",  # managed by setuptools_scm
]

dependencies = [
    "scikit-learn>=1.2",
    "joblib>=1.1.1",        # CVE-2022-21797: scikit-learn dependency, addressed in 1.2.0dev0, which isn't currently released
    "scipy>=1.3.2",
    "numpy>=1.24",
    "pandas >= 2.2.0; python_version >= '3.9'", "Bottleneck > 1.3.5; python_version >= '3.9'",
    "pandas >= 1.0.3 ;python_version < '3.9'",
    "ConfigSpace>=0.7.1",
]

[project.optional-dependencies]
flaml = [
    "flaml[blendsearch]",
]
smac = [
    "smac>=2.0.0",
]
# Meta targets to install everything.
# NOTE: Be sure to add new extras from above to these.
full = ["mlos-core[flaml,smac]"]
full-tests = [
    "mlos-core[full]",
    "pytest",
    "pytest-forked",
    "pytest-xdist",
    "pytest-cov",
    "pytest-local-badge",
]

[project.urls]
Documentation = "https://microsoft.github.io/MLOS/"
Repository = "https://github.com/microsoft/MLOS/"
Issues = "https://github.com/microsoft/MLOS/issues"
"Package Source" = "https://github.com/microsoft/MLOS/tree/main/mlos_core/"

# Tell setuptools where to find the package.
[tool.setuptools.packages.find]
where = ["mlos_core"]

# Tell setuptools_scm to use the root directory for git info.
[tool.setuptools_scm]
root = ".."

[tool.setuptools.package-data]
mlos_core = ["py.typed"]

[tool.setuptools.exclude-package-data]
mlos_core = ["tests", "tests/*"]

# TODO: Ensure that py.typed and other expected files are included.

# FIXME: Command option bdist_wheel.universal is not defined
#[tool.distutils.bdist_wheel]
#universal = true

# FIXME: Make sure the version is correct when we build the wheel.
